--- a/petrax-frontend/src/app/pet-profile/pet-detail-modal/pet-detail-modal.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-detail-modal/pet-detail-modal.component.html
@@ -16,7 +16,7 @@
   <p><strong>Birthday:</strong> {{ petBirthday | date }}</p>
   <p><strong>Medication:</strong> {{ petMedication }}</p>
   <p><strong>Allergy:</strong> {{ petAllergy }}</p>
-  <p><strong>Microchip:</strong> {{ petMicrochip }}</p>a
+  <p><strong>Microchip:</strong> {{ petMicrochip }}</p>
   <p><strong>Diagnoses:</strong> {{ petDiagnoses }}</p>
 </div>
 
