--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.html
@@ -7,18 +7,20 @@
   <h2>Pet Profile</h2>
   <ul>
     <li *ngFor="let pet of pets">
-      <span class="name">{{ pet.name }}</span>
-      <span class="breed">{{ pet.breed }}</span>
-      <span class="age">{{ pet.age | number}}</span>
-      <span class="weight">{{ pet.weight | number }}</span>
-      <span class="birthday">{{ pet.birthday | date }}</span>
-      <span class="medications">{{ pet.medication }}</span>
-      <span class="allergies">{{ pet.allergy }}</span>
-      <span class="microchip">{{ pet.microchip }}</span>
-      <span class="diagnoses">{{ pet.diagnoses }}</span>
+      <span class="petName">{{ petName }}</span>
+      <span class="petType">{{ petType }}</span>
+      <span class="petBreed">{{ petBreed }}</span>
+      <span class="petAge">{{ petAge | number }}</span>
+      <span class="petWeight">{{ petWeight | number }}</span>
+<!--      <span class="petBirthday">{{ petBirthday | date }}</span>-->
+      <span class="petBirthday">{{ datePipe.transform(petBirthday, 'shortDate') }}</span>
+      <span class="petMedication">{{ petMedication }}</span>
+      <span class="petAllergy">{{ petAllergy }}</span>
+      <span class="petMicrochip">{{ petMicrochip }}</span>
+      <span class="petDiagnoses">{{ petDiagnoses }}</span>
     </li>
   </ul>
-  <button class="add-pet-button" (click)="openAddPetModal()">Add New Pet</button>
+    <button class="add-pet-button" (click)="openAddPetModal()">Add New Pet</button>
 </div>
 </div>
 
