--- a/petrax-frontend/src/app/pet-profile/add-pet-modal/add-pet-modal.component.html
+++ b/petrax-frontend/src/app/pet-profile/add-pet-modal/add-pet-modal.component.html
@@ -40,12 +40,12 @@
 
     <div class="form-group">
       <label for="weight">Weight</label>
-      <input type="number" class="form-control" id="weight" [(ngModel)]="newPet.weight" required>
+      <input type="number" class="form-control" id="weight" [(ngModel)]="newPet.petWeight" required>
     </div>
 
     <div class="form-group">
       <label for="petBirthdate">Birthdate</label>
-      <input type="date" class="form-control" id="petBirthdate" [(ngModel)]="newPet.petBirthdate" required>
+      <input type="datetime-local" class="form-control" id="petBirthdate" [(ngModel)]="newPet.petBirthdate" required>
     </div>
 
     <div class="form-group">
@@ -71,6 +71,7 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button class="add-pet-button" (click)="openAddPetModal()">Add New Pet</button>
+<!--  <button class="add-pet-button" (click)="openAddPetModal()">Add New Pet</button>-->
+  <button type="button" class="btn btn-primary" (click)="onSubmit()">Add Pet</button>
   <button type="button" class="btn btn-secondary" (click)="closeModal()">Cancel</button>
 </div>
