--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.html
@@ -1,2 +1,14 @@
-<p>pet-profile works!</p>
-
+<div class="app-container">
+  <h1 class="app-heading">PETrax 🐕 🐈 🦜 🦎</h1>
+  <div class="content-container">
+    <div class="pet-profile-container">
+      <h2>Pets</h2>
+      <ul>
+        <li *ngFor="let pet of pets">
+          <span class="petName">{{ pet.petName }}</span>
+        </li>
+      </ul>
+      <button class="add-pet-button" (click)="openAddPetModal()">Add Pet</button>
+    </div>
+  </div>
+</div>
