--- a/petrax-frontend/src/app/pet-profile/pet-detail-modal.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-detail-modal.component.html
@@ -13,7 +13,7 @@
   <p><strong>Breed:</strong> {{ petBreed }}</p>
   <p><strong>Age:</strong> {{ petAge | number }}</p>
   <p><strong>Weight:</strong> {{ petWeight | number }}</p>
-  <p><strong>Birthday:</strong> {{ petBirthday | Date }}</p>
+  <p><strong>Birthdate:</strong> {{ petBirthdate | date }}</p>
   <p><strong>Medication:</strong> {{ petMedication }}</p>
   <p><strong>Allergy:</strong> {{ petAllergy }}</p>
   <p><strong>Microchip:</strong> {{ petMicrochip }}</p>
