Tayler -- updating backend files

--- a/petrax-frontend/src/app/pet-profile/add-pet-modal.component.html
+++ b/petrax-frontend/src/app/pet-profile/add-pet-modal.component.html
@@ -42,7 +42,7 @@
 
     <div class="form-group">
       <label for="petBirthdate">Birthdate</label>
-      <input type="datetime-local" class="form-control" id="petBirthdate" [(ngModel)]="newPet.petBirthdate" required>
+      <input type="date" class="form-control" id="petBirthdate" [(ngModel)]="newPet.petBirthdate" required>
     </div>
 
     <div class="form-group">
