Some debugging...data sorta goes to database.

--- a/src/main/resources/templates/petProfile/addNewPet.html
+++ b/src/main/resources/templates/petProfile/addNewPet.html
@@ -48,8 +48,8 @@
     <label for="diagnoses">Diagnoses:</label>
     <input type="text" id="diagnoses" name="diagnoses"><br>
 
-    <label for="petPic">Photo:</label>
-    <input type="file" id="petPic" name="petPic"><br>
+<!--    <label for="petPic">Photo:</label>-->
+<!--    <input type="file" id="petPic" name="petPic"><br>-->
 
     <input type="submit" value="Add New Pet">
 </form>
