--- a/petrax-frontend/src/app/pet-profile/add-pet-modal.component.html
+++ b/petrax-frontend/src/app/pet-profile/add-pet-modal.component.html
@@ -6,16 +6,17 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+<!--Angular requires 'name' attribute, which Angular requires for form controls with [(ngModel)].-->
 <div class="modal-body">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="petName">Name</label>
-      <input type="text" class="form-control" id="petName" [(ngModel)]="newPet.petName" required>
+      <input type="text" class="form-control" id="petName" name="petName" [(ngModel)]="newPet.petName" required>
     </div>
 
     <div class="form-group">
       <label for="petType">Pet Type</label>
-      <select class="form-control" id="petType" [(ngModel)]="newPet.petType" required>
+      <select class="form-control" id="petType" name="petType" [(ngModel)]="newPet.petType" required>
         <option value="CAT">Cat</option>
         <option value="DOG">Dog</option>
         <option value="BIRD">Bird</option>
@@ -27,42 +28,42 @@
 
     <div class="form-group">
       <label for="petBreed">Breed</label>
-      <input type="text" class="form-control" id="petBreed" [(ngModel)]="newPet.petBreed" required>
+      <input type="text" class="form-control" id="petBreed" name="petBreed" [(ngModel)]="newPet.petBreed" required>
     </div>
 
     <div class="form-group">
       <label for="petAge">Age</label>
-      <input type="number" class="form-control" id="petAge" [(ngModel)]="newPet.petAge" required>
+      <input type="number" class="form-control" id="petAge" name="petAge" [(ngModel)]="newPet.petAge" required>
     </div>
 
     <div class="form-group">
       <label for="weight">Weight</label>
-      <input type="number" class="form-control" id="weight" [(ngModel)]="newPet.petWeight" required>
+      <input type="number" class="form-control" id="weight" name="weight" [(ngModel)]="newPet.petWeight" required>
     </div>
 
     <div class="form-group">
       <label for="petBirthdate">Birthdate</label>
-      <input type="date" class="form-control" id="petBirthdate" [(ngModel)]="newPet.petBirthdate" required>
+      <input type="date" class="form-control" id="petBirthdate" name="petBirthdate" [(ngModel)]="newPet.petBirthdate" required>
     </div>
 
     <div class="form-group">
       <label for="petMedication">Medication</label>
-      <input type="text" class="form-control" id="petMedication" [(ngModel)]="newPet.petMedication" required>
+      <input type="text" class="form-control" id="petMedication" name="petMedication" [(ngModel)]="newPet.petMedication" required>
     </div>
 
     <div class="form-group">
       <label for="petAllergy">Allergy</label>
-      <input type="text" class="form-control" id="petAllergy" [(ngModel)]="newPet.petAllergy" required>
+      <input type="text" class="form-control" id="petAllergy" name="petMedication" [(ngModel)]="newPet.petAllergy" required>
     </div>
 
     <div class="form-group">
       <label for="petMicrochip">Microchip</label>
-      <input type="text" class="form-control" id="petMicrochip" [(ngModel)]="newPet.petMicrochip" required>
+      <input type="text" class="form-control" id="petMicrochip" name="petMicrochip" [(ngModel)]="newPet.petMicrochip" required>
     </div>
 
     <div class="form-group">
       <label for="petDiagnoses">Diagnoses</label>
-      <input type="text" class="form-control" id="petDiagnoses" [(ngModel)]="newPet.petDiagnoses" required>
+      <input type="text" class="form-control" id="petDiagnoses" name="petDiagnoses" [(ngModel)]="newPet.petDiagnoses" required>
     </div>
 
   </form>
