--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.html
@@ -5,7 +5,7 @@
       <h2>Pets</h2>
       <ul>
         <li *ngFor="let pet of pets">
-          <span class="petName">{{ pet.petName }}</span>
+          <span class="petName">{{ pet.name }}</span>
         </li>
       </ul>
       <button class="add-pet-button" (click)="openAddPetModal()">Add Pet</button>
