--- a/petrax-frontend/src/app/care-professional/care-professional.component.html
+++ b/petrax-frontend/src/app/care-professional/care-professional.component.html
@@ -8,6 +8,7 @@
            <th>Business Name</th>
            <th>Website</th> 
            <th>Phone Number</th>
+           <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -17,6 +18,9 @@
             <td> {{professional.businessName}} </td>
             <td> {{professional.website}} </td>
             <td> {{professional.phoneNumber}} </td>
+            <td>
+                <button (click)="updateProfessional(professional.id)" class="btn btn-info">Update</button>
+            </td>
         </tr>
     </tbody>
 </table>
