--- a/petrax-frontend/src/app/register/register.component.html
+++ b/petrax-frontend/src/app/register/register.component.html
@@ -1,25 +1,29 @@
 <h1>User Registration</h1>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtSNbZXisyon_iyVc0zzReieqXRO0mXto&libraries=places"></script>
+<!--commenting out for now-->
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtSNbZXisyon_iyVc0zzReieqXRO0mXto&libraries=places"></script>-->
 
 <form (ngSubmit)="onSubmit()" #registrationForm="ngForm">
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="firstName" [(ngModel)]="firstName" required><br>
+  <label for="firstName">First Name:</label>
+  <input type="text" id="firstName" name="firstName" [(ngModel)]="firstName" required><br>
 
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="lastName" [(ngModel)]="lastName" required><br>
+  <label for="lastName">Last Name:</label>
+  <input type="text" id="lastName" name="lastName" [(ngModel)]="lastName" required><br>
 
-    <label for="contactEmail">Email:</label>
-    <input type="email" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required><br>
+  <label for="contactEmail">Email:</label>
+  <input type="email" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required><br>
 
-    <label for="pwHash">Password:</label>
-    <input type="password" id="pwHash" name="pwHash" [(ngModel)]="pwHash" required><br>
+  <label for="pwHash">Password:</label>
+  <input type="password" id="pwHash" name="pwHash" [(ngModel)]="pwHash" required><br>
 
-    <label for="address">Address:</label>
-    <input type="text" id="address" name="address" [(ngModel)]="address" required #address="ngModel" autocomplete="off">
+  <label for="pwHashConfirm">Confirm Password:</label>
+  <input type="password" id="pwHashConfirm" name="pwHashConfirm" [(ngModel)]="pwHashConfirm" required><br>
 
-    <!-- Google Places Autocomplete -->
-    <input type="text" id="googleAddress" (keydown)="false" (paste)="false" #googleAddress>
+  <label for="address">Address:</label>
+  <input type="text" id="address" name="address" [(ngModel)]="address" required autocomplete="off"><br>
 
-    <input type="submit" value="Register" [disabled]="!registrationForm.valid">
+  <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+
+  <input type="submit" value="Register" [disabled]="!registrationForm.valid">
+
 </form>
+
