Tayler -- ADD PET FORM LOADS TO THE DATABASE!!!!!!!

--- a/src/main/resources/templates/petProfile/deletePet.html
+++ b/src/main/resources/templates/petProfile/deletePet.html
@@ -7,11 +7,11 @@
 <h1>Delete Pet</h1>
 <form action="/petProfile/deletePet" method="post">
 
-    <label for="name">Pet Name:</label>
-    <input type="text" id="name" name="name" required><br>
+    <label for="petName">Pet Name:</label>
+    <input type="text" id="petName" name="petName" required><br>
 
-    <label for="birthdate">Birthdate:</label>
-    <input type="date" id="birthdate" name="birthdate" required><br>
+    <label for="petBirthdate">Birthdate:</label>
+    <input type="date" id="petBirthdate" name="petBirthdate" required><br>
 
     <input type="submit" value="Delete Pet">
 </form>
