--- a/src/main/resources/templates/petProfile/addNewPet.html
+++ b/src/main/resources/templates/petProfile/addNewPet.html
@@ -11,8 +11,8 @@
 
 <form action="/petProfile/addNewPet" method="post">
 
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name"><br>
+    <label for="petName">Name:</label>
+    <input type="text" id="petName" name="petName"><br>
 
     <label for="petType">Pet Type:</label>
     <select id="petType" name="petType">
@@ -24,32 +24,29 @@
         <option value="OTHER">Other</option>
     </select><br>
 
-    <label for="breed">Breed:</label>
-    <input type="text" id="breed" name="breed"><br>
+    <label for="petBreed">Breed:</label>
+    <input type="text" id="petBreed" name="petBreed"><br>
 
-    <label for="age">Age:</label>
-    <input type="number" id="age" name="age"><br>
+    <label for="petAge">Age:</label>
+    <input type="number" id="petAge" name="petAge"><br>
 
-    <label for="weight">Weight:</label>
-    <input type="number" id="weight" name="weight"><br>
+    <label for="petWeight">Weight:</label>
+    <input type="number" id="petWeight" name="petWeight"><br>
 
-    <label for="birthdate">Birthdate:</label>
-    <input type="date" id="birthdate" name="birthdate"><br>
+    <label for="petBirthdate">Birthdate:</label>
+    <input type="date" id="petBirthdate" name="petBirthdate"><br>
 
-    <label for="medication">Medication:</label>
-    <input type="text" id="medication" name="medication"><br>
+    <label for="petMedication">Medication:</label>
+    <input type="text" id="petMedication" name="petMedication"><br>
 
-    <label for="allergy">Allergy:</label>
-    <input type="text" id="allergy" name="allergy"><br>
+    <label for="petAllergy">Allergy:</label>
+    <input type="text" id="petAllergy" name="petAllergy"><br>
 
-    <label for="microchip">Microchip Number:</label>
-    <input type="text" id="microchip" name="microchip"><br>
+    <label for="petMicrochip">Microchip Number:</label>
+    <input type="text" id="petMicrochip" name="petMicrochip"><br>
 
-    <label for="diagnoses">Diagnoses:</label>
-    <input type="text" id="diagnoses" name="diagnoses"><br>
-
-<!--    <label for="petPic">Photo:</label>-->
-<!--    <input type="file" id="petPic" name="petPic"><br>-->
+    <label for="petDiagnoses">Diagnoses:</label>
+    <input type="text" id="petDiagnoses" name="petDiagnoses"><br>
 
     <input type="submit" value="Add New Pet">
 </form>
