debugging. Got the register form working and saving data to the database. created a modal that pops up when a user is successfully registered to direct them to the login

--- a/petrax-frontend/src/app/register/register.component.html
+++ b/petrax-frontend/src/app/register/register.component.html
@@ -27,3 +27,11 @@
 
 </form>
 
+<div class="modal" *ngIf="showModal">
+  <div class="modal-content">
+    <h2>Registration Successful</h2>
+    <p>You have successfully registered! Please click below to login.</p>
+    <button (click)="navigateToLogin()">Login</button>
+  </div>
+</div>
+
