--- a/petrax-frontend/src/styles.css
+++ b/petrax-frontend/src/styles.css
@@ -21,3 +21,6 @@ footer, header {
   flex-shrink: 0;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
