Everything work for password hashing and form and data submission

--- a/petrax-frontend/src/app/home/home.component.html
+++ b/petrax-frontend/src/app/home/home.component.html
@@ -4,6 +4,6 @@
       Welcome to our website...
     </div>
     <button class="nav-item" [routerLink]="['/login']"> Login </button>
-    <button class="signup-btn">Sign Up</button>
+    <button class="signup-btn" [routerLink]="['/register']"> Sign Up </button>
   </div>
 </div>
