Css Styling for FAQ

--- a/petrax-frontend/src/app/faq/faq.component.html
+++ b/petrax-frontend/src/app/faq/faq.component.html
@@ -1,3 +1,4 @@
+<body>
 <h1>Frequently Asked Questions about Pets</h1>
 
 <div class="faq">
@@ -50,9 +51,10 @@
   <p>Answer: Contact your veterinarian or a pet poison control hotline immediately. Do not induce vomiting without professional guidance.</p>
 </div>
 
-<h2>A Random Cat Fact</h2>
+<h2 id="RandomFact">A Random Cat Fact</h2>
 <div id="factElement"></div>
 
-<h2>Please use Google for further questions</h2>
+<h2 id="RandomFact">Please use Google for further questions</h2>
 
 <div class="gcse-search"></div>
+</body>
