Tayler -- delete pet button appears, pop up asking to confirm before deleting, but doesn't remove from database yet

--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.html
@@ -6,6 +6,7 @@
       <ul>
         <li *ngFor="let pet of pets">
           <span class="petName">{{ pet.petName }}</span>
+          <button class="delete-pet-button" (click)="openDeletePetModal(pet.petId)">Remove Pet</button>
         </li>
       </ul>
       <button class="add-pet-button" (click)="openAddPetModal()">Add Pet</button>
