--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -1,16 +1,14 @@
+<form (ngSubmit)="onSubmit()" #loginForm="ngForm">
 <div class="login-container">
     <h2>Login</h2>
-    <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" id="email" name="email" [(ngModel)]="email" required />
+            <input type="text" id="email" name="email" [(ngModel)]="email" required class="form-control">
         </div>
-
         <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" [(ngModel)]="password" required />
+            <label for="pwHash">Password</label>
+            <input type="password" id="pwHash" name="pwHash" [(ngModel)]="pwHash" required class="form-control">
         </div>
-
-        <button type="submit" [disabled]="!loginForm.valid">Login</button>
-    </form>
+  <button type="submit" [disabled]="!loginForm.valid">Login</button>
 </div>
+</form>
