Added delete functionality to Care Professionals Component

--- a/petrax-frontend/src/app/care-professional/care-professional.component.html
+++ b/petrax-frontend/src/app/care-professional/care-professional.component.html
@@ -20,6 +20,7 @@
             <td> {{professional.phoneNumber}} </td>
             <td>
                 <button (click)="updateProfessional(professional.id)" class="btn btn-info">Update</button>
+                <button (click)="deleteProfessional(professional.id)" class="btn btn-danger" style="margin-left: 10px">Delete</button>
             </td>
         </tr>
     </tbody>
