--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -1,4 +1,4 @@
-<div class="login-container">
+<!-- <div class="login-container">
     <h2>Login</h2>
     <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
         <div class="form-group">
@@ -13,4 +13,4 @@
 
         <button type="submit" [disabled]="!loginForm.valid">Login</button>
     </form>
-</div>
+</div> -->
