--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -1,16 +1,28 @@
-<div class="login-container">
-    <h2>Login</h2>
-    <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+<form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+<!--    <div class="login-container">-->
+        <h2>Login</h2>
         <div class="form-group">
+
             <label for="email">Email</label>
-            <input type="text" id="email" name="email" [(ngModel)]="email" required />
-        </div>
+            <input type="text" id="email" name="email" [(ngModel)]="email" required class="form-control">
 
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" [(ngModel)]="password" required />
-        </div>
+<!--        </div>-->
+<!--        <div class="form-group">-->
 
+            <label for="pwHash">Password</label>
+            <input type="password" id="pwHash" name="pwHash" [(ngModel)]="pwHash" required class="form-control">
+
+            <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+<!--        </div>-->
         <button type="submit" [disabled]="!loginForm.valid">Login</button>
-    </form>
+    </div>
+</form>
+
+<div class="modal" *ngIf="showModal">
+    <div class="modal-content">
+        <h2>Login Successful</h2>
+        <p>Welcome to PETRAX! Please click below to continue.</p>
+        <button (click)="navigateToHome()">Home</button>
+    </div>
 </div>
+
