--- a/petrax-frontend/src/app/register/register.component.html
+++ b/petrax-frontend/src/app/register/register.component.html
@@ -12,7 +12,7 @@
   <label for="contactEmail">Email:</label>
   <input type="email" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required><br>
 
-  <label for="pwHash">Password:</label>
+  <label for="pwHash">Password: *must be at least 6 characters</label>
   <input type="password" id="pwHash" name="pwHash" [(ngModel)]="pwHash" required><br>
 
   <label for="pwHashConfirm">Confirm Password:</label>
