--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -1,16 +1,19 @@
-<div class="login-container">
-    <h2>Login</h2>
-    <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" [(ngModel)]="email" required />
-        </div>
+<!--<div class="login-container">-->
+<!--    <h2>Login</h2>-->
+<!--    <form (ngSubmit)="onSubmit()" #loginForm="ngForm">-->
+<!--        <div class="form-group">-->
+<!--            <label for="email">Email</label>-->
+<!--            <input type="text" id="email" name="email" [(ngModel)]="email" required />-->
+<!--        </div>-->
 
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" [(ngModel)]="password" required />
-        </div>
+<!--        <div class="form-group">-->
+<!--            <label for="password">Password</label>-->
+<!--            <input type="password" id="password" name="password" [(ngModel)]="password" required />-->
+<!--        </div>-->
 
-        <button type="submit" [disabled]="!loginForm.valid">Login</button>
-    </form>
+<!--        <button type="submit" [disabled]="!loginForm.valid">Login</button>-->
+<!--    </form>-->
+<!--</div>-->
+<div>
+    <h1>LOGIN Page</h1>
 </div>
