--- a/petrax-frontend/src/app/navbar/navbar.component.html
+++ b/petrax-frontend/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header class="navbar-container">
-  <div class="petrax">PETrax 🐕 🐈 🦜 🦎</div>
+  <img src="/assets/logos/PETraxlogonameonly.png" alt="PETrax Logo" class="navbar-logo">
   <div class="menu-items">
     <a class="navbar-item" routerLink="/home">Home</a>
     <a class="navbar-item" routerLink="/calendar">Calendar</a>
