--- a/petrax-frontend/src/app/landing-page/landing-page.component.html
+++ b/petrax-frontend/src/app/landing-page/landing-page.component.html
@@ -1,23 +1,41 @@
-<div class = "welcome">
-    <h1>Welcome, UserName!</h1>
-</div>
-<div class="profile-link">
-    <a >My Profile</a>
-</div>
+<div class="center-container">
+    <div class="rectangle">
+            <div class = "welcome">
+                <h1>Welcome, UserName</h1>
+            </div>
+            <div class="profile-link">
+                <h2><a >My Profile</a></h2> 
+        </div>
 
-<!-- Diplay Links to pet profiles -->
-<!-- Needs: 
-Router links to individual profile for each user
-router link to add new pet page -->
-<div>
-    <div *ngFor="let pet of pets" class="pet-card">{{pet.petName}}</div>
-    <div class="pet-card">
-        <a>Add New Pet!</a>
+    <!-- Diplay Links to pet profiles -->
+    <!-- Needs: 
+    Router links to individual profile for each user
+    router link to add new pet page -->
+    <div>
+        <div *ngFor="let pet of pets" class="pet-card">
+            <h4>{{pet.petName}}</h4>
+        </div>
+        <div class="pet-card">
+            <a class = "PetName">Add New Pet!</a>
+        </div>
+    </div>
+
+    <!-- Upcoming Events Section
+    Needs: 
+    List upcoming events for a user within a time frame-- if none say "No events to show"
+    Link to Calendar at the bottom of the section -->
+    <div>
+    <h2 class="events-header">Upcoming Events</h2>
+    </div>
+    <div class="events-container">
+        <ul>
+            <li *ngFor = "let event of events">{{event.name}}</li>
+        </ul>
+        <h3 class = "calendar-link">
+            <a href="">Go To Calendar</a>
+        </h3>
+    </div>
+
+
     </div>
 </div>
-
-<!-- Upcoming Events Section
-Needs: 
-List upcoming events for a user within a time frame-- if none say "No events to show"
-Link to Calendar at the bottom of the section -->
-<div class="container"></div>
