tiny change on About wording

--- a/petrax-frontend/src/app/about/about.component.html
+++ b/petrax-frontend/src/app/about/about.component.html
@@ -27,7 +27,7 @@
 
       <div class="section-title">Core Values</div>
       <p class="about-content">
-        "Teamwork makes the dream work." Our journey has been a testament to this ethos. Every individual in our team brings a unique strength, and together we've paved the way for PETrax to lead in the pet care app industry. Our team includes Tayler Edelen, Jennifer Goldring, Delaney Greenie, Mars Lebeau, and Ryan Scoles – each dedicated to redefining pet care.
+        "Teamwork makes the dream work." Our journey has been a testament to this ethos. Every individual in our team brings a unique strength, and together we've paved the way for PETrax to lead in the pet care app industry. Our team includes Tayler Edelen, Jennifer Goldring, Delaney Green, Mars Lebeau, and Ryan Scoles – each dedicated to redefining pet care.
       </p>
 
       <div class="section-title">The Journey So Far</div>
