--- a/petrax-frontend/src/app/navbar/navbar.component.html
+++ b/petrax-frontend/src/app/navbar/navbar.component.html
@@ -4,6 +4,7 @@
     <a class="navbar-item" routerLink="/home">Home</a>
     <a class="navbar-item" routerLink="/calendar">Calendar</a>
     <a class="navbar-item" routerLink="/faq">FAQ</a>
+    <a class="navbar-item" routerLink="/pet-profile">Pet Profile</a>
     <!-- More nav pages can be put here -->
     <!-- User Profile might go where home is, not sure yet -->
   </div>
