--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.html
@@ -6,6 +6,7 @@
       <ul>
         <li *ngFor="let pet of pets">
           <span *ngIf="isPetPresent(pet.petId)" class="petName">{{ pet.petName }}</span>
+          <button class="view-pet-button" (click)="openPetDetailModal(pet)">Details</button>
           <button class="delete-pet-button" (click)="openDeletePetModal(pet.petId)">Remove Pet</button>
         </li>
       </ul>
