--- a/petrax-frontend/src/app/landing-page/landing-page.component.html
+++ b/petrax-frontend/src/app/landing-page/landing-page.component.html
@@ -11,15 +11,17 @@
     <!-- Needs: 
     Router links to individual profile for each user
     router link to add new pet page -->
-    <div>
-        <div >
-            <h4 *ngFor="let pet of pets" class="pet-card">{{pet.petName}}
-                <!-- <button (click)="openPetDetailModal"></button> -->
-            </h4>
-            
-        </div>
-        <h4><a  class="pet-card" (click)="openAddPetModal()">Add New Pet!</a></h4>
+    <div class="pet-card-container">
+        <div *ngFor="let pet of pets" class="pet-card">
+            <div class="pet-info">
+            <h4>{{ pet.petName }}</h4>
+            </div>
+            <div >
+                <button class="pet-button">View</button>
+            </div>
+      </div>
     </div>
+    <h4><a  class="pet-card" (click)="openAddPetModal()">Add New Pet!</a></h4>
 
     <!-- Upcoming Events Section
     Needs: 
